<resources>
    <string name="app_name">GPSurvey</string>
    <string name="GPS_start_option">GPS bekapcsolása</string>
    <string name="start_point_measure">Pont mérése</string>
    <string name="point_format_option">Pont kijelzés formátuma</string>
    <string name="decimal_format_option">Decimális formátum</string>
    <string name="angle_min_sec_format_option">Fok - perc - mperc</string>
    <string name="xyz_format_option">X, Y, Z</string>
    <string name="calc_option">Távolság/terület számítása</string>
    <string name="set_point_option">Pont bevitele</string>
    <string name="input_points_option">Pontok beolvasása</string>
    <string name="save_data_option">Adatok fájlba mentése</string>
    <string name="point_catching_option">Pont felkeresése</string>
    <string name="save_points_with_pipe">Pontok fájlba mentése ✔️</string>
    <string name="save_points_without_pipe">Pontok fájlba mentése</string>
    <string name="exit_option">Kilépés</string>
    <!-- Strings used for fragments for navigation -->
    <string name="latitude">Φ:</string>
    <string name="longitude">Λ:</string>
    <string name="altitude">h:</string>
    <string name="X">X:</string>
    <string name="Y">Y:</string>
    <string name="Z">Z:</string>
    <string name="save_point">Pont mentése</string>
    <string name="save_data">Mentés</string>
    <string name="eov">EOV:</string>
    <string name="dot_symbol">🌏</string>
    <string name="measured_data">MeasuredPoints</string>
    <string name="compass">Iránytű</string>
    <string name="distance">Távolság:</string>
    <string name="perimeter">Kerület:</string>
    <string name="area">Terület:</string>
    <string name="elevation">Δm:</string>
    <string name="use_all_measured_points">Az összes mért pont használata, a mérés sorrendjében</string>
    <string name="from_centric_point">Az álláspont távolság adatai a topocentrum és a kitűzendő pont egyeneséhez</string>
    <string name="set_file_name">Fájlnév megadása</string>
    <string name="file_name">fájlnév</string>
    <string name="set_file_type">Fájltípus megadása</string>
    <string name="set_data_type">Adattípus megadása</string>
    <string name="kml_format">kml</string>
    <string name="txt_format">txt</string>
    <string name="add_find_point_text">WGS vagy EOV koordináta megadása:</string>
    <string name="find_point_direction">Irány:</string>
    <string name="first_point_hint">Decimális Φ vagy Y</string>
    <string name="second_point_hint">Decimális Λ vagy X</string>
    <string name="find_point_arrow">find_point_arrow</string>
    <string name="stop">Stop</string>
    <string name="elevation_diagram">Magassági profil</string>
    <string name="ok">OK</string>
    <string name="todo">TODO</string>
</resources>