<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

<LinearLayout
    android:id="@+id/calc_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/distance_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/distance"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/distance_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/perimeter_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/perimeter"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/perimeter_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/area_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/area"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/area_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/elevation_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/elevation"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/elevation_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="sans-serif-light"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />
    <CheckBox
        android:id="@+id/all_points_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:gravity="center"
        android:text="@string/use_all_measured_points"
        android:textSize="16sp"
        android:checked="true"/>

    <Spinner
        android:id="@+id/point_spinner"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textAlignment="center"/>

</LinearLayout>

</androidx.core.widget.NestedScrollView>

